--- a/package.json
+++ b/package.json
@@ -9,6 +9,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": ""
 }
