started figuring out how I want to do some of the core parsing

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": ""
+  "author": "",
+  "dependencies": {
+    "linkedom": "^0.14.21"
+  }
 }
