--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "node --watch ./transpile.js",
     "watch": "npx watch-http-server dist/",
-    "debug": "node --inspect --watch transpile.js"
+    "debug": "node --inspect --watch transpile.js",
+    "serve": "yarn create-key && BASCIK_SERVE=1 yarn dev",
+    "create-key-clobber": "./create-key",
+    "create-key": "(node -e \"if (!require('fs').existsSync('./localhost-cert.pem') || !require('fs').existsSync('./localhost-privkey.pem')) { console.log('key pair exists'); process.exit(1); } \") || yarn create-key-clobber"
   },
   "author": "collin-thomas",
   "dependencies": {
