--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch ./transpile.js",
-    "watch": "npx watch-http-server dist/",
+    "watch": "npx watch-http-server -a localhost -p 3000 dist/",
     "debug": "node --inspect --watch transpile.js",
     "serve": "yarn create-key && BASCIK_SERVE=1 yarn dev",
+    "serve-prod": "yarn create-key && BASCIK_SERVE=1 BASCIK_PROD=1 yarn dev",
+    "build": "BASCIK_PROD=1 node ./transpile.js",
     "create-key-clobber": "./create-key",
     "create-key": "(node -e \"if (!require('fs').existsSync('./localhost-cert.pem') || !require('fs').existsSync('./localhost-privkey.pem')) { console.log('key pair exists'); process.exit(1); } \") || yarn create-key-clobber"
   },
