--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "BASCIK_PROD=1 node ./transpile.js",
     "create-key-clobber": "./create-key",
     "create-key": "(node -e \"if (!require('fs').existsSync('./localhost-cert.pem') || !require('fs').existsSync('./localhost-privkey.pem')) { console.log('key pair exists'); process.exit(1); } \") || yarn create-key-clobber",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ci": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
+    "test:coverage": "vitest run --coverage.enabled"
   },
   "author": "collin-thomas",
   "dependencies": {
@@ -23,6 +25,7 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@vitest/coverage-c8": "^0.29.8",
     "vitest": "^0.29.8"
   }
 }
