--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node --watch-path=./transpile.js --watch-path=./lib --watch-path=./components --watch-path=./pages ./transpile.js",
     "watch": "npx watch-http-server -a localhost -p 3000 dist/",
-    "debug": "node --inspect --watch --watch-path=./transpile.js --watch-path=./lib --watch-path=./components --watch-path=./pages transpile.js",
+    "debug": "node --inspect --watch-path=./transpile.js --watch-path=./lib --watch-path=./components --watch-path=./pages transpile.js",
     "serve": "yarn create-key && BASCIK_SERVE=1 yarn dev",
     "serve-prod": "yarn create-key && BASCIK_SERVE=1 BASCIK_PROD=1 yarn dev",
     "build": "BASCIK_PROD=1 node ./transpile.js",
@@ -22,7 +22,7 @@
     "chokidar": "^3.5.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.17.0"
   },
   "devDependencies": {
     "@vitest/coverage-c8": "^0.29.8",
