--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "transpile.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch-path=./transpile.js --watch-path=./lib --watch-path=./components --watch-path=./pages ./transpile.js",
+    "dev": "node --watch-path=./transpile.js --watch-path=./lib ./transpile.js",
     "watch": "npx watch-http-server -a localhost -p 3000 dist/",
     "debug": "node --inspect --watch-path=./transpile.js --watch-path=./lib --watch-path=./components --watch-path=./pages transpile.js",
     "serve": "yarn create-key && BASCIK_SERVE=1 yarn dev",
@@ -19,7 +19,7 @@
   },
   "author": "collin-thomas",
   "dependencies": {
-    "chokidar": "^3.5.3"
+    "chokidar": "^4.0.3"
   },
   "engines": {
     "node": ">=22.17.0"
