- Use the node.js http2 server to host the files during development - Server the transpiled files via in-memory buffers - Add brotli compression to the http2 server for increased performance - Add cacheHttp config to prevent caching during development - Next up is to add hot reload during development

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,10 @@
   },
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "search.exclude": {
     "**/dist/**": true
-}
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
