--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "transpile.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch-path=./transpile.js --watch-path=./lib ./transpile.js",
-    "watch": "npx watch-http-server -a localhost -p 3000 dist/",
-    "debug": "node --inspect --watch-path=./transpile.js --watch-path=./lib --watch-path=./components --watch-path=./pages transpile.js",
-    "serve": "yarn create-key && BASCIK_SERVE=1 yarn dev",
-    "serve-prod": "yarn create-key && BASCIK_SERVE=1 BASCIK_PROD=1 yarn dev",
+    "dev": "yarn create-key && node ${INSPECT} --watch-path=./transpile.js --watch-path=./lib --watch-path=./bascik.config.js ./transpile.js",
+    "debug": "INSPECT=--inspect yarn dev",
     "build": "BASCIK_PROD=1 node ./transpile.js",
     "create-key-clobber": "./create-key",
     "create-key": "(node -e \"if (!require('fs').existsSync('./localhost-cert.pem') || !require('fs').existsSync('./localhost-privkey.pem')) { console.log('key pair exists'); process.exit(1); } \") || yarn create-key-clobber",
