Add examples of CSS files for pages and how to do css for print

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
   "search.exclude": {
-    "**/dist/**": true
+    "**/dist/**": true,
+    "**/node_modules/**": true
   },
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
