Add --build arg for bascik command to set BascikConfig.isBuild

--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "demo-app",
+  "name": "bascik-demo-app",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "pkg-dev": "node --inspect --watch-path=./bascik.config.js --watch-path=./node_modules/@bascik/bascik/src ./node_modules/@bascik/bascik/src/transpile.js",
-    "dev": "bascik"
+    "dev": "bascik",
+    "build": "bascik --build"
   },
   "dependencies": {}
 }
