--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -2,6 +2,7 @@
   "name": "bascik-demo-app",
   "version": "1.0.0",
   "type": "module",
+  "license": "AGPL-3.0-only",
   "scripts": {
     "pkg-dev": "node --inspect --watch-path=./bascik.config.js --watch-path=./node_modules/@bascik/bascik/src ./node_modules/@bascik/bascik/src/transpile.js",
     "dev": "bascik",
