--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,27 +1,27 @@
 {
   "name": "@bascik/bascik",
-  "version": "0.1.0",
   "description": "A Web Framework",
-  "main": "transpile.js",
-  "type": "module",
+  "version": "0.1.0",
   "license": "AGPL-3.0-only",
-  "scripts": {
-    "test": "vitest",
-    "test:ci": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
-    "test:coverage": "vitest run --coverage.enabled"
-  },
+  "homepage": "https://bascik.dev",
+  "author": "Collin Thomas",
+  "type": "module",
   "bin": {
     "bascik": "src/transpile.js"
-  },
-  "author": "collin-thomas",
-  "dependencies": {
-    "chokidar": "^4.0.3"
   },
   "engines": {
     "node": ">=22.17.0"
   },
+    "dependencies": {
+    "chokidar": "^4.0.3"
+  },
   "devDependencies": {
     "@vitest/coverage-c8": "^0.29.8",
     "vitest": "^0.29.8"
+  },
+  "scripts": {
+    "test": "vitest",
+    "test:ci": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
+    "test:coverage": "vitest run --coverage.enabled"
   }
 }
